# elastic-log-cli

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
elastic_log_cli/: __main__.py  cli.py  client.py  config.py  elasticsearch_ext.py  exceptions.py  search.py
elastic_log_cli/_compat/: aws.py
elastic_log_cli/cli/: __init__.py  parser.py
elastic_log_cli/kql/: __init__.py  __main__.py  kql.grammar  parser.py
elastic_log_cli/utils/: backoff.py
tasks/: __init__.py  docker.py  docs.py  helpers.py  release.py  run.py
tests/: test_cli.py  test_version.py
tests/cli/: test_parser.py
tests/kql/: test_parser.py
tests/utils/: test_backoff.py
