[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "elastic-log-cli"
version = "0.2.0"
description = ""
authors = ["Jack Smith"]
packages = [
    {include = "elastic_log_cli"},
]
homepage = "https://github.com/jacksmith15/elastic-log-cli"
repository = "https://github.com/jacksmith15/elastic-log-cli"
readme = "README.md"

[tool.poetry.scripts]
elastic-logs = "elastic_log_cli.__main__:run_cli"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
click = "^8.0.4"
lark = "^1.1.1"
botocore = {version = "^1.27.46", optional = true}
boto3 = {version = "^1.24.46", optional = true}
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
toml = "^0.10"
ipdb = "^0.13.9"
ipython = "^8.0.1"
mypy = "^0.931"
pyflakes = "^2.4.0"
invoke = "^1.6.0"
termcolor = "^1.1.0"
pytest-cov = "^3.0.0"
changelog-cmd = "^0.2.0"
types-requests = "^2.28.0"
types-termcolor = "^1.1.3"
types-toml = "^0.10.4"
types-urllib3 = "^1.26.9"
settings-doc = "^0.8.1"

[tool.poetry.extras]
aws = ["botocore", "boto3"]

[tool.isort]
# Setting compatible with black. See https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
show_column_numbers = true
show_error_codes = true
color_output = true
warn_unused_configs = true
warn_unused_ignores = true
follow_imports = "normal"

[[tool.mypy.overrides]]
module = [
    "setuptools.*",
    "invoke.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
python_functions = "should_*"

# Structure: https://docs.pytest.org/en/stable/warnings.html
# Values:    https://docs.python.org/3/library/warnings.html#describing-warning-filters
#            action:message:category:module:line
filterwarnings = []
